- Implementando AlunoController, index.xhtml e listaAlunos.xhtml.

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -3,9 +3,15 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
-	<title>Projeto web usando JSF</title>
+	<title>Atividade 8 da aula 12</title>
+	<h:outputStylesheet library="css" name="styles.css" />
 </h:head>
 <h:body>
-	<h:outputText value="Este é um projeto web com JSF" />
+	<h2>Atividade 8 da aula 12</h2>
+	<br />
+	<h:form>
+		<h:commandLink action="listaAlunos" value="Listar alunos">
+		</h:commandLink>
+	</h:form>
 </h:body>
 </html>
