- Implementando inserirAluno.xhtml e corrigindo erro da opção voltar no listaAlunos.xhtml.

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -11,6 +11,8 @@
 	<br />
 	<h:form>
 		<h:commandLink action="listaAlunos" value="Listar alunos">
+		<br />
+		<h:commandLink action="inserirAluno" value = "Inserir aluno" />
 		</h:commandLink>
 	</h:form>
 </h:body>
