--- a/WebContent/listaAlunos.xhtml
+++ b/WebContent/listaAlunos.xhtml
@@ -25,7 +25,7 @@
 				#{aluno.ra}
 </h:column>
 		</h:dataTable>
-		<h:commandLink value="Voltar" onclick="history.go(-1)" />
+		<h:commandLink value="Voltar" action="index" />
 	</h:form>
 </h:body>
 </html>
