--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
+	
 <h:head>
 	<title>Atividade 8 da aula 12</title>
 	<h:outputStylesheet library="css" name="styles.css" />
