--- a/WebContent/inserirAluno.xhtml
+++ b/WebContent/inserirAluno.xhtml
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
+
 <h:head>
 	<title>Atividade 5 da aula 13</title>
 	<h:outputStylesheet library="css" name="styles.css" />
@@ -13,25 +15,25 @@
 		<table>
 			<tr>
 				<td>Matrícula:</td>
-				<td><h:inputText id="matricula" size="10"
+				<td><p:inputText id="matricula" size="10"
 						value="#{alunoController.matricula}" /></td>
 			</tr>
 			<tr>
 				<td>Nome:</td>
-				<td><h:inputText size="20" value="#{alunoController.nome}" /></td>
+				<td><p:inputText size="20" value="#{alunoController.nome}" /></td>
 			</tr>
 			<tr>
 				<td>RA:</td>
-				<td><h:inputText size="5" value="#{alunoController.ra}" /></td>
+				<td><p:inputText size="5" value="#{alunoController.ra}" /></td>
 			</tr>
 			<tr>
 				<td></td>
-				<td><h:commandButton value="Inserir"
+				<td><p:commandButton value="Inserir"
 						action="#{alunoController.addAluno}" rendered="true">
-					</h:commandButton> <br /> <h:outputText value="#{alunoController.mensagem}" /></td>
+					</p:commandButton> <br /> <h:outputText value="#{alunoController.mensagem}" /></td>
 			</tr>
 		</table>
-		<h:commandLink value="Voltar" action="index" />
+		<p:commandLink value="Voltar" action="index" />
 	</h:form>
 </h:body>
 </html>
